# smersh-cli

./: .gitignore  Dockerfile  LICENSE  README.md  api.py  main.py  models.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: pipy-publish.yml
smersh_cli/: __init__.py  __main__.py  api.py  models.py
smersh_cli/locale/fr/LC_MESSAGES/: smersh-cli.mo  smersh-cli.po
smersh_cli/utils/: case.py  date.py  json.py
utils/: json.py
