[metadata]
license_file = LICENSE
name = smersh_cli
author = CMEPW
author_email = cmepw@protonmail.com
description = A SMERSH command-line client
long_description_content_type = text/markdown
long_description = file:README.md
url = https://smersh.app/
project_urls =
    Source = https://github.com/CMEPW/smersh-cli
classifiers =
    Intended Audience :: End Users/Desktop
    Topic :: Security
    Natural Language :: English
    Operating System :: POSIX
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    smersh_cli
    smersh_cli.utils
python_requires = >= 3.5
install_requires=
    rich
    dataclasses_json
    requests
    pydantic
    cmd2
    importlib_metadata >= 3.6
setup_requires =
    setuptools_scm >= 1.15
include_package_data = True

[options.entry_points]
console_scripts =
    smersh-cli = smersh_cli.__main__:main
